<resources>
    <string name="app_name">AnimeTier</string>
    <!--Errors-->
    <string name="error_user_not_found">User not found</string>
    <string name="error_something_went_wrong">Oops something went wrong</string>
    <string name="error_email_cannot_be_blank">Email can\'t be blank</string>
    <string name="error_email_pattern_not_match">Email is not valid</string>
    <string name="error_password_too_short">Password should contains at least %d characters</string>
    <string name="error_confirm_password_not_match">Passwords do not match. Please try again.</string>
    <string name="error_user_is_unauthorized">User is unauthorized</string>
    <string name="error_nick_name_is_empty">Please enter your nickname</string>
    <string name="error_failed_to_upload_photo">Failed to upload your photo. Please try again</string>

    <!-- Menu -->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_list">Watch List</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_profile">Profile</string>

    <string name="text_welcome">Welcome</string>
    <string name="text_sign_up_to_start">Sign up to start</string>
    <string name="text_email">Email</string>
    <string name="text_search">Search</string>
    <string name="text_have_account_sing_in">Have account? Sing in!</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_register">Register</string>
    <string name="text_continue">Continue</string>
    <string name="text_sign_in_to_start">Sign in to start</string>
    <string name="text_havent_account">Haven\'t account?</string>
    <string name="text_sign_up">Sign up!</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_nickname">Nickname</string>
    <string name="text_about">About</string>
    <string name="text_fill_your_profile">Fill your profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_trending_anime">Trending Anime</string>
    <string name="text_popular_ongoing">Popular ongoing</string>
    <string name="text_episodes">%1$d Episodes</string>
    <string name="text_all">All</string>


</resources>