<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.denisbovsunivskyi.animetier.presentation.model.auth.SignUpModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_sign_up_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/Text.H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_welcome" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Text.H5.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_sign_up_to_start" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp">

                <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
                    android:id="@+id/edit_email"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:text="@={model.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey_dark"
                android:layout_marginTop="10dp">

                <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
                    android:id="@+id/edit_password"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@={model.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_password"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grey_dark"
                android:layout_marginTop="10dp">

                <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
                    android:id="@+id/edit_confirm_password"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword|textNoSuggestions"
                    android:text="@={model.confirmPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_have_account_btn"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/text_have_account_sing_in"
                android:textAppearance="@style/Text.H5.Light" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:textAppearance="@style/Text.H5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/selector_background_btn_color"
                android:textColor="@color/selector_text_btn_color"
                android:paddingVertical="10dp"
                android:text="@string/text_continue"
                app:cornerRadius="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</layout>
