<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.denisbovsunivskyi.animetier.presentation.model.auth.SignUpModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/Text.H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:text="@string/text_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Text.H5.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_sign_up_to_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/welcome_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_welcome_image"
                android:src="@drawable/ic_welcome_image"
         />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:text="@={model.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:text="@={model.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_forgot_password"
                android:textAppearance="@style/Text.H5.Light" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/havent_account_btn"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/text_havent_account"
                android:textAppearance="@style/Text.H5.Light" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="75dp"
                android:backgroundTint="@color/grey_dark"
                android:enabled="false"
                android:paddingVertical="10dp"
                android:text="@string/text_continue"
                android:textAppearance="@style/Text.H5.White"
                app:cornerRadius="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>
