<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.denisbovsunivskyi.animetier.presentation.model.user.ProfileRegistrationModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="-200dp"
                android:alpha="0.9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/registration_background" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_registration_icon" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:srcCompat="@drawable/ic_plus_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nick_name"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/profile_image">

                <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
                    android:id="@+id/edit_nick_name"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_nickname"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:text="@={model.nickname}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_about"
                style="@style/TextInputLayoutMultiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/input_nick_name">

                <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/text_about"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLength="255"
                    android:minHeight="200dp"
                    android:singleLine="false"
                    android:text="@={model.about}"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/selector_background_btn_color"
                android:paddingVertical="10dp"
                android:text="@string/text_continue"
                android:textAppearance="@style/Text.H5"
                android:textColor="@color/selector_text_btn_color"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/input_about" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>